Fixed presentational CSS stuffs
- Formalized UI and typography elements into compartmentalized LESS
files.
- Updated Install.php look and feel.
- Added "Preferred Language" for blog (english is default)

--- a/appfiles/app/_LESS/_config.less
+++ b/appfiles/app/_LESS/_config.less
@@ -1,14 +1,17 @@
 
 // Colors Definitions
 @white:         #fff;
-@light-gray:    #999;
-@gray:          #666;
-@black:         #333;
+  @off-white:   #e3e3e3;
+
+@gray:          #888;
+  @dark-gray:   #666;
+
+@black:         #3f3f3f;
 
 
-@blue:          #2e77b0;
-  @light-blue:  lighten(@blue, 20%);
-  @dark-blue:  darken(@blue, 20%);
+@blue:          #6ca0c8;
+  @light-blue:  #b5cfe3;
+  @dark-blue:   #2e77b0;
 
 @trans:         transparent;
 
@@ -78,32 +81,32 @@
 //
 // Use percentages for maximum flexibility
 //
-@full-size:      100%;
+@full-size:       100%;
 
-@one-half:        @full-size   / 2;
+@one-half:        @full-size    / 2;
 
-@one-third:       @full-size   / 3;
+@one-third:       @full-size    / 3;
 @two-thirds:      @one-third    * 2;
 
-@one-fourth:      @full-size   / 4;
+@one-fourth:      @full-size    / 4;
 @three-fourths:   @one-fourth   * 3;
 
-@one-fifth:       @full-size   / 5;
+@one-fifth:       @full-size    / 5;
 @two-fifths:      @one-fifth    * 2;
 @three-fifths:    @one-fifth    * 3;
 @four-fifths:     @one-fifth    * 4;
 
-@one-sixth:       @full-size   / 6;
+@one-sixth:       @full-size    / 6;
 @five-sixths:     @one-sixth    * 5;
 
-@one-seventh:     @full-size   / 7;
+@one-seventh:     @full-size    / 7;
 @two-sevenths:    @one-seventh  * 2;
 @three-sevenths:  @one-seventh  * 3;
 @four-sevenths:   @one-seventh  * 4;
 @fifth-sevenths:  @one-seventh  * 5;
 @six-sevenths:    @one-seventh  * 6;
 
-@one-eighth:      @full-size   / 8;
+@one-eighth:      @full-size    / 8;
 @three-eighths:   @one-eighth   * 3;
 @five-eighths:    @one-eighth   * 5;
 @seven-eighths:   @one-eighth   * 7;
@@ -126,17 +129,17 @@
 .linear-gradient(@origin: top, @start: @white 0%, @end: #222 100%) {
   background-image: -webkit-linear-gradient(@origin, @start, @end);
   background-image: -moz-linear-gradient(@origin, @start, @end);
-  background-image: -ms-linear-gradient(@origin, @start, @end);
   background-image: -o-linear-gradient(@origin, @start, @end);
+  background-image: -ms-linear-gradient(@origin, @start, @end);
   background-image: linear-gradient(@origin, @start, @end);
 }
 
 .transition(@atts: all, @time: 0.3s, @easing: linear) {
   -webkit-transition: @atts @time @easing;
-     -moz-transition: @atts @time @easing;
-      -ms-transition: @atts @time @easing;
-       -o-transition: @atts @time @easing;
-          transition: @atts @time @easing;
+  -moz-transition: @atts @time @easing;
+  -o-transition: @atts @time @easing;
+  -ms-transition: @atts @time @easing;
+  transition: @atts @time @easing;
 }
 
 .font-smoothing(@smoothing: subpixel~'-'antialiased) {
@@ -149,4 +152,9 @@
   :-moz-placeholder           { color: @color; font-style: @font-style; font-weight: @font-weight; }
   ::-moz-placeholder          { color: @color; font-style: @font-style; font-weight: @font-weight; }
   :-ms-input-placeholder      { color: @color; font-style: @font-style; font-weight: @font-weight; }
+}
+
+.text-size-adjust(@adjust: 100%) {
+  -ms-text-size-adjust: @adjust;
+  -webkit-text-size-adjust: @adjust;
 }
