Finalized Install.php look and feel
- Updated default styles libs
- Added some basic copyright functionality
- Decided every external library should be hosted from http://cdnjs.org

--- a/appfiles/app/_LESS/_config.less
+++ b/appfiles/app/_LESS/_config.less
@@ -1,42 +1,63 @@
 
 // Colors Definitions
-@white:         #fff;
-  @off-white:   #e3e3e3;
+@white:            #fff;
+  @off-white:      #e3e3e3;
 
-@gray:          #888;
-  @dark-gray:   #666;
+@gray:             #888;
+  @dark-gray:      #666;
 
-@black:         #3f3f3f;
+@black:            #3f3f3f;
 
 
-@blue:          #6ca0c8;
-  @light-blue:  #b5cfe3;
-  @dark-blue:   #2e77b0;
+@blue:             #6ca0c8;
+  @light-blue:     #b5cfe3;
+  @dark-blue:      #2e77b0;
 
-@trans:         transparent;
+@orange:           #e9b545;
+  @light-orange:   #f0cb7c;
+  @dark-orange:    #d9a330;
 
-// Custom Colors Defintions
+@purple:           #ae84c2;
+  @light-purple:   #c6a9d4;
+  @dark-purple:    #9166a5;
+
+@trans:           transparent;
 
 
 /**
  * Be nice and share your color swatches ;)
  *
- *   // Basic colors
- *   white:           #fff;
- *   light-gray:      #ccc;
- *   gray:            #666;
- *   black:           #333;
+ *  @white:            #fff;
+ *    @off-white:      #e3e3e3;
  *
- *   // Custom Colors Defintions
- *   EXAMPLEgreen:    #8cc63f
+ *  @gray:             #888;
+ *    @dark-gray:      #666;
+ *
+ *  @black:            #3f3f3f;
+ *
+ *
+ *  @blue:             #6ca0c8;
+ *    @light-blue:     #b5cfe3;
+ *    @dark-blue:      #2e77b0;
+ *
+ *  @orange:           #e9b545;
+ *    @light-orange:   #f0cb7c;
+ *    @dark-orange:    #d9a330;
+ *
+ *  @purple:           #ae84c2;
+ *    @light-purple:   #c6a9d4;
+ *    @dark-purple:    #9166a5;
+ *
+ *  @trans:           transparent;
+ *
  */
 
 
 
 // MAX TEMPLATE WIDTH
-@max-width:       96rem;
+@max-width:        96rem;
 
-@border-radius:   0.3rem;
+@border-radius:    0.3rem;
 
 // ========== IMAGE DIRECTORIES ========== //
 
@@ -81,35 +102,35 @@
 //
 // Use percentages for maximum flexibility
 //
-@full-size:       100%;
+@fullsize:  100%;
 
-@one-half:        @full-size    / 2;
+@1_2:       @fullsize   / 2;
 
-@one-third:       @full-size    / 3;
-@two-thirds:      @one-third    * 2;
+@1_3:       @fullsize   / 3;
+@2_3:       @1_3        * 2;
 
-@one-fourth:      @full-size    / 4;
-@three-fourths:   @one-fourth   * 3;
+@1_4:       @fullsize   / 4;
+@3_4:       @1_4        * 3;
 
-@one-fifth:       @full-size    / 5;
-@two-fifths:      @one-fifth    * 2;
-@three-fifths:    @one-fifth    * 3;
-@four-fifths:     @one-fifth    * 4;
+@1_5:       @fullsize   / 5;
+@2_5:       @1_5        * 2;
+@3_5:       @1_5        * 3;
+@4_5:       @1_5        * 4;
 
-@one-sixth:       @full-size    / 6;
-@five-sixths:     @one-sixth    * 5;
+@1_6:       @fullsize   / 6;
+@5_6:       @1_6        * 5;
 
-@one-seventh:     @full-size    / 7;
-@two-sevenths:    @one-seventh  * 2;
-@three-sevenths:  @one-seventh  * 3;
-@four-sevenths:   @one-seventh  * 4;
-@fifth-sevenths:  @one-seventh  * 5;
-@six-sevenths:    @one-seventh  * 6;
+@1_7:       @fullsize   / 7;
+@2_7:       @1_7        * 2;
+@3_7:       @1_7        * 3;
+@4_7:       @1_7        * 4;
+@5_7:       @1_7        * 5;
+@6_7:       @1_7        * 6;
 
-@one-eighth:      @full-size    / 8;
-@three-eighths:   @one-eighth   * 3;
-@five-eighths:    @one-eighth   * 5;
-@seven-eighths:   @one-eighth   * 7;
+@1_8:       @fullsize   / 8;
+@3_8:       @1_8        * 3;
+@5_8:       @1_8        * 5;
+@7_8:       @1_8        * 7;
 
 
 
@@ -158,3 +179,5 @@
   -ms-text-size-adjust: @adjust;
   -webkit-text-size-adjust: @adjust;
 }
+
+
