--- a/appfiles/app/_LESS/_typography.less
+++ b/appfiles/app/_LESS/_typography.less
@@ -3,7 +3,7 @@ hr {
   clear: both;
   margin: 3rem 0;
   padding: 0;
-  width: @full-size;
+  width: @fullsize;
   height: 0.3rem;
   border: 0;
   background-color: @off-white;
