--- a/appfiles/app/_LESS/install.less
+++ b/appfiles/app/_LESS/install.less
@@ -8,32 +8,39 @@
 #message {
   position: relative;
   margin: 0 auto;
-  width: 600px;
+  width: 60rem;
   color: @gray;
-  font-weight: @light;
   text-align: justify;
+  font-weight: @light;
   font-size: 2.1rem;
 
   h1 {
+    margin: 3rem 0 0;
     color: @gray;
     text-align: center;
     font-weight: inherit;
     font-size: 5.7rem;
   }
 
+  h2 {
+    margin: 1rem 0;
+    text-align: center;
+    font-weight: inherit;
+  }
+
   .config-form {
-    padding: 0;
     margin: 0;
+    padding: 0;
   }
 
   label, input, textarea, select {
-    font-weight: inherit;
     margin: 0.3rem 0;
+    font-weight: inherit;
   }
 
   label {
-    text-align: right;
     width: 34%;
+    text-align: right;
   }
 
   input, textarea, select {
@@ -45,4 +52,13 @@
     margin: 3rem auto;
     width: 30%;
   }
+
+  .copyright {
+    margin: 3rem 0;
+    width: auto;
+    text-align: center;
+    font-weight: normal;
+    font-size: 1.4rem;
+  }
+
 }
