--- a/appfiles/app/css/install.css
+++ b/appfiles/app/css/install.css
@@ -1,379 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic|Source+Code+Pro:400,600);
-/**
- * Be nice and share your color swatches ;)
- *
- *   // Basic colors
- *   white:           #fff;
- *   light-gray:      #ccc;
- *   gray:            #666;
- *   black:           #333;
- *
- *   // Custom Colors Defintions
- *   EXAMPLEgreen:    #8cc63f
- */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  background: #fff;
-  color: #000;
-  font-size: 62.5%;
-  font-family: sans-serif;
-}
-body {
-  -webkit-font-smoothing: subpixel - antialiased;
-  font-smoothing: subpixel - antialiased;
-  margin: 0;
-  background: #ffffff;
-  font-size: 1em;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-body,
-body * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: bold;
-}
-dfn {
-  font-style: italic;
-}
-hr {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  height: 0;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-size: 1em;
-  font-family: monospace, serif;
-}
-pre {
-  white-space: pre-wrap;
-}
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  position: relative;
-  vertical-align: baseline;
-  font-size: 75%;
-  line-height: 0;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-img {
-  border: 0;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-fieldset {
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-  border: 1px solid #c0c0c0;
-}
-legend {
-  border: 0;
-  padding: 0;
-}
-button,
-input,
-select,
-textarea {
-  margin: 0;
-  font-size: 100%;
-  font-family: inherit;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type="search"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-appearance: textfield;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-button {
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  position: relative;
-  display: inline-block;
-  padding: 0.5rem 1.5rem;
-  border: 0;
-  border-radius: 0.3rem;
-  background: #b5cfe3;
-  color: #2e77b0;
-  font-family: inherit;
-}
-button:hover {
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  background: #6ca0c8;
-  color: #ffffff;
-}
-button:active {
-  background: #2e77b0;
-  color: #ffffff;
-}
-button[disabled] {
-  background: #e3e3e3;
-  color: #888888;
-}
-label,
-input,
-textarea,
-select {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-}
-label {
-  position: relative;
-  padding: 0.6rem 1.5rem 0.6rem 0;
-  color: #888888;
-  text-align: right;
-  font-family: inherit;
-}
-input,
-textarea,
-select {
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  padding: 0.5rem 1rem;
-  border: 1px solid transparent;
-  border-radius: 0.3rem;
-}
-input:focus,
-textarea:focus,
-select:focus {
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  outline: 0;
-  border: 1px solid #e3e3e3;
-}
-input:hover,
-textarea:hover,
-select:hover {
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  border-color: #e3e3e3;
-}
-select {
-  border-radius: 0;
-  padding: 0.5rem 0.5rem 0.5rem 1rem;
-}
-::-webkit-input-placeholder {
-  color: #888888;
-  font-style: normal;
-  font-weight: normal;
-}
-:-moz-placeholder {
-  color: #888888;
-  font-style: normal;
-  font-weight: normal;
-}
-::-moz-placeholder {
-  color: #888888;
-  font-style: normal;
-  font-weight: normal;
-}
-:-ms-input-placeholder {
-  color: #888888;
-  font-style: normal;
-  font-weight: normal;
-}
-hr {
-  display: block;
-  clear: both;
-  margin: 3rem 0;
-  padding: 0;
-  width: 100%;
-  height: 0.3rem;
-  border: 0;
-  background-color: #e3e3e3;
-  font-size: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  font-family: inherit;
-  display: block;
-}
-p {
-  margin: 3rem 0;
-}
-p code {
-  font-size: 1.6rem;
-  background: #e3e3e3;
-  border-radius: 0.3rem;
-  padding: 0 0.3rem;
-}
-#message {
-  position: relative;
-  margin: 0 auto;
-  width: 600px;
-  color: #888888;
-  font-weight: 300;
-  text-align: justify;
-  font-size: 2.1rem;
-}
-#message h1 {
-  color: #888888;
-  text-align: center;
-  font-weight: inherit;
-  font-size: 5.7rem;
-}
-#message .config-form {
-  padding: 0;
-  margin: 0;
-}
-#message label,
-#message input,
-#message textarea,
-#message select {
-  font-weight: inherit;
-  margin: 0.3rem 0;
-}
-#message label {
-  text-align: right;
-  width: 34%;
-}
-#message input,
-#message textarea,
-#message select {
-  width: 65%;
-}
-#message .submit-button {
-  display: block;
-  margin: 3rem auto;
-  width: 30%;
-}
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic|Source+Code+Pro:400,600);article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background:#fff;color:#000;font-size:62.5%;font-family:sans-serif}body{-webkit-font-smoothing:subpixel - antialiased;font-smoothing:subpixel - antialiased;margin:0;background:#fff;font-size:1em;font-family:'Source Sans Pro',sans-serif}body,body *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}hr{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;height:0}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-size:1em;font-family:monospace,serif}pre{white-space:pre-wrap}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{position:relative;vertical-align:baseline;font-size:75%;line-height:0}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}fieldset{margin:0 2px;padding:.35em .625em .75em;border:1px solid #c0c0c0}legend{border:0;padding:0}button,input,select,textarea{margin:0;font-size:100%;font-family:inherit}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;padding:0}input[type="search"]{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;-webkit-appearance:textfield}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0}textarea{overflow:auto;vertical-align:top}table{border-spacing:0;border-collapse:collapse}a{color:#6ca0c8;text-decoration:none}a:visited{border-color:#ae84c2;color:#ae84c2;text-decoration:none}a:visited:hover{color:#9166a5;text-decoration:underline}a:hover{color:#2e77b0;text-decoration:underline}a:active{color:#2e77b0;text-decoration:underline}a.subtle-link{color:inherit;text-decoration:none}a.subtle-link:visited{color:#888}a.subtle-link:visited:hover,a.subtle-link:hover{color:#666;text-decoration:underline}button{-webkit-transition:all .3s linear;-moz-transition:all .3s linear;-o-transition:all .3s linear;-ms-transition:all .3s linear;transition:all .3s linear;position:relative;display:inline-block;padding:.5rem 1.5rem;border:0;border-radius:.3rem;background:#dae7f1;color:#2e77b0;font-family:inherit}button:hover{-webkit-transition:all .3s linear;-moz-transition:all .3s linear;-o-transition:all .3s linear;-ms-transition:all .3s linear;transition:all .3s linear;background:#6ca0c8;color:#fff}button:active{background:#2e77b0;color:#fff}button[disabled]{background:#e3e3e3;color:#888}label,input,textarea,select{position:relative;display:inline-block;margin:0}label{position:relative;padding:.6rem 1.5rem .6rem 0;color:#888;text-align:right;font-family:inherit}input,textarea,select{-webkit-transition:all .3s linear;-moz-transition:all .3s linear;-o-transition:all .3s linear;-ms-transition:all .3s linear;transition:all .3s linear;padding:.5rem 1rem;border:1px solid transparent;border-radius:.3rem;color:#6ca0c8}input:hover,textarea:hover,select:hover{-webkit-transition:all .3s linear;-moz-transition:all .3s linear;-o-transition:all .3s linear;-ms-transition:all .3s linear;transition:all .3s linear;-webkit-box-shadow:0 0 5px #e3e3e3;box-shadow:0 0 5px #e3e3e3}input:focus,textarea:focus,select:focus{-webkit-transition:all .3s linear;-moz-transition:all .3s linear;-o-transition:all .3s linear;-ms-transition:all .3s linear;transition:all .3s linear;outline:0;-webkit-box-shadow:0 0 5px #e9b545;box-shadow:0 0 5px #e9b545}select{padding:.5rem .5rem .5rem 1rem;border:transparent;border-radius:0}::-webkit-input-placeholder{color:#888;font-style:normal;font-weight:300}:-moz-placeholder{color:#888;font-style:normal;font-weight:300}::-moz-placeholder{color:#888;font-style:normal;font-weight:300}:-ms-input-placeholder{color:#888;font-style:normal;font-weight:300}hr{display:block;clear:both;margin:3rem 0;padding:0;width:100%;height:.3rem;border:0;background-color:#e3e3e3;font-size:0}h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{font-family:inherit;display:block}p{margin:3rem 0}p code{font-size:1.6rem;background:#e3e3e3;border-radius:.3rem;padding:0 .3rem}#message{position:relative;margin:0 auto;width:60rem;color:#888;text-align:justify;font-weight:300;font-size:2.1rem}#message h1{margin:3rem 0 0;color:#888;text-align:center;font-weight:inherit;font-size:5.7rem}#message h2{margin:1rem 0;text-align:center;font-weight:inherit}#message .config-form{margin:0;padding:0}#message label,#message input,#message textarea,#message select{margin:.3rem 0;font-weight:inherit}#message label{width:34%;text-align:right}#message input,#message textarea,#message select{width:65%}#message .submit-button{display:block;margin:3rem auto;width:30%}#message .copyright{margin:3rem 0;width:auto;text-align:center;font-weight:normal;font-size:1.4rem}
